--- a/Andrew Orvdahl .html
+++ b/Andrew Orvdahl .html
@@ -49,7 +49,7 @@ function check(form)/*function to check userid & password*/
                     <a href="Comedy Hub.html">Home Page</a></li><br />
                     <a href="Message Boards.html">Message Boards</a><br />
                     <a href="Featured Members.html">Featured Members</a><br />
-                    <a href="new club.html">Denver Club</a><br />
+                    <a href="new club.html">Denver Clubs</a><br />
                              
 </hr>
 </font>
@@ -66,8 +66,8 @@ function check(form)/*function to check userid & password*/
 <div id="content">
 
 <h1 style="font-family:Comic Sans Ms; align="center";font-size:20pt;
-color:#00FF00;>
-Comedy Hub - Andrew Orvdahl  </h1>
+color:#00FF00;><A HREF="Comedy Hub.html" STYLE="text-decoration: none">Comedy Hub</a>
+- Andrew Orvdahl  </h1>
 
 <ul>
 <img src="image\Andrew Orvedahl.jpg" width="207.9" height="147.35" 
@@ -115,5 +115,10 @@ Brooklyn, NY, US<br/>
 <a href="http://www.youtube.com/watch?feature=player_detailpage&v=K_5CsMQAryY">Fuel Up</a><br />
 </p>
 </ul>
+
+<div id="footer">
+
+<h3 align="center";>Thanks for coming to the<A HREF="Comedy Hub.html" STYLE="text-decoration: none">Comedy Hub</a></h3>
+<div>
 </body>
 </html>
