--- a/Comedy Hub.html
+++ b/Comedy Hub.html
@@ -64,8 +64,7 @@ function check(form)/*function to check userid & password*/
 <div id="content">
         
 <h1 style="font-family:Comic Sans Ms; align="center";font-size:20pt;
-color:#00FF00;>
-Comedy Hub - main </h1>
+color:#00FF00;><A HREF="Comedy Hub.html" STYLE="text-decoration: none">Comedy Hub</a>- main </h1>
 <ul>
 <h5> Welcome to the Comedy Hub!<br /></h5>
 <h6>This site is for finding out about Denver comedians, where they are from, what they are doing now and see old shows.
@@ -76,6 +75,11 @@ Comedy Hub - main </h1>
 </ul>
 
 </div>
+
+<div id="footer">
+
+<h3 align="center";>Thanks for coming to the<A HREF="Comedy Hub.html" STYLE="text-decoration: none">Comedy Hub</a></h3>
+<div>
 </body>
 </html>
 
